--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap-sass": "^3.0.0"
   },
   "dependencies": {
-    "bourbon": "^4.2.7"
+    "bourbon": "^4.2.7",
+    "bourbon-neat": "^1.7.4"
   }
 }
