--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "bootstrap-sass": "^3.0.0"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
     "bourbon": "^4.2.7",
     "bourbon-neat": "^1.7.4"
   }
