--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.2.*",
         "laravelrus/sleepingowl": "4.*@dev",
         "cviebrock/eloquent-sluggable": "~4.0@dev",
-        "mercadopago/sdk": "0.5.2"
+        "mercadopago/sdk": "0.5.2",
+        "gloudemans/shoppingcart": "^2.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
