--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravelrus/sleepingowl": "4.*@dev",
         "cviebrock/eloquent-sluggable": "~4.0@dev",
         "mercadopago/sdk": "0.5.2",
-        "gloudemans/shoppingcart": "^2.1"
+        "gloudemans/shoppingcart": "^2.1",
+        "intervention/image": "^2.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
