--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "dev": "gulp watch"
   },
   "devDependencies": {
+    "bootstrap-sass": "^3.0.0",
     "gulp": "^3.9.1",
     "laravel-elixir": "^5.0.0",
-    "bootstrap-sass": "^3.0.0"
+    "laravel-elixir-rollup": "^0.3.3"
   },
   "dependencies": {
     "babel-preset-es2015": "^6.9.0",
