--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "bourbon": "^4.2.7",
-    "bourbon-neat": "^1.7.4"
+    "bourbon-neat": "^1.7.4",
+    "lodash": "^4.15.0"
   }
 }
