--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "cviebrock/eloquent-sluggable": "~4.0@dev",
         "mercadopago/sdk": "0.5.2",
         "intervention/image": "^2.3",
-        "laravel/socialite": "^2.0"
+        "laravel/socialite": "^2.0",
+        "maatwebsite/excel": "^2.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
